--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.4",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0"
   },
   "devDependencies": {
