--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "seed": "node seeds/seed.js",
+    "seed": "node config/seeds.js",
     "watch": "nodemon server.js"
   },
   "keywords": [],
@@ -17,9 +17,10 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.0"
+    "mongoose": "^7.6.2"
   },
   "devDependencies": {
+    "faker": "^6.6.6",
     "nodemon": "^3.0.1"
   }
 }
