--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "seed": "node config/seeds.js",
+    "seed": "node seeds/seed.js",
     "watch": "nodemon server.js"
   },
   "keywords": [],
