--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@apollo/server": "^4.9.4",
     "bcrypt": "^5.1.1",
+    "decode": "^0.3.0",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.6.2"
   },
   "devDependencies": {
